--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         <div class="slider">
             <div class="slides">
-                <img src="C:\Users\91933\Desktop\harshToletServices\1.png" class="slide" alt="Image 1">
+                <img src="C:\Users\91933\Desktop\harshToletServices\MYREALSTATE_PROJECT/1.png" class="slide" alt="Image 1">
                 <img src="5c1cbaf96bcec-wallpaper-preview.jpg" class="slide" alt="Image 2">
                 <img src="modern-house-luminescent-pool-n926oqb3p0b1kpwn.jpg" class="slide" alt="Image 3">
                 <img src="interior-design-neoclassical-style-with-furnishings-decor_23-2151199287.jpg" class="slide" alt="Image 4">
