--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="path/to/your/favicon-32x32.png" sizes="32x32">
 <link rel="icon" href="path/to/your/favicon-16x16.png" sizes="16x16">
 
-    <title>portfolio</title>
+    <title>harsh_tolet</title>
+    <link rel="icon" type="image/png" href="/lastimg.png">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -135,7 +136,7 @@ setInterval(nextSlide, 5000); // Change slide every 5 seconds
        
         </section>
         <section id="contact">
-            <h2 class="aboutus"><i class="fa-solid fa-pen-to-square"></i> Our Services</h2>
+            <h2 class="aboutus"><i class="fa-solid fa-pen-to-square"></i> Contact Us</h2>
             
            <div id="imageservices">
             <img  class="landscape" src="blueimage.png" alt="ourservices">
